Added kaneki image and a few more elements

--- a/test.html
+++ b/test.html
@@ -1,4 +1,15 @@
-<h1>Hey. I'm a big heading</h1>
-<p>Hey. I'm a paragraph elemnt. Cool huh? </p>
-<a href="https://google.com" target="blank" title="Lets go to Google"> Click me! I'm a link!</a>
-#target blank is to allow the link to go a nw page when clicked and title gives the link a name seen when mouse is hovered on
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test page</title>
+</head>
+<body>
+	<h1>Hey. I'm a big heading</h1>
+	<p>Hey. I'm a paragraph elemnt. Cool huh? </p>
+	<a href="https://google.com" target="blank" title="Lets go to Google"> Click me! I'm a link!</a>
+	#target blank is to allow the link to go a nw page when clicked and title gives the link a name seen when mouse is hovered on
+	<p>My name is:<br>
+	Kaneki Ken</p>
+	<img src="https://vignette.wikia.nocookie.net/tokyoghoul/images/c/c8/White_Haired_Kaneki_RE_S2.png/revision/latest/scale-to-width-down/340?cb=20181128045755">
+</body>
+</html>
