wrote css for website and changed some html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html>
 <head>
 	<link rel="icon" href="img/killua.jpg">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
+	<link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
 	<title>KILLUA ZOLDYCK</title>
 </head>
 <body>
@@ -19,7 +21,7 @@
 		<h2>About Killua</h2>
 		<p> Killua is the third child of Silva and Kikyo Zoldyck and the heir of the Zoldyck Family, until he runs away from home and becomes a Rookie Hunter. He is a trained assasin. He is the best friend of Gon Freecss, and is currently traveling with Alluka Zoldyck.</p>
 		<img src="img/family.jpg">
-		<p>Killua and his family</p>
+		<p class="caption">Killua and his family</p>
 
 		<!-- Characteristics -->
 		<h2>Killua's  Characteristics</h2>
